# INF2608-comp-grafica

./: .gitignore  README.md  pyproject.toml  ray_tracing_1.puml  requirements.txt
inputs/: colored_spacing_base.json  colored_spacing_var_00.json  colored_spacing_var_01.json  colored_spacing_var_02.json  example_scene.json  light_var_back.json  light_var_left.json  light_var_right.json  light_var_top.json  scene_from_main.json  spacing_shadows_scene.json  three_spheres_scene.json
outputs/scene_20260318_233138/: properties.md
outputs/scene_20260318_233404/: properties.md
outputs/scene_20260318_233426/: properties.md
outputs/scene_20260318_233652/: properties.md
outputs/scene_20260318_233908/: properties.md
outputs/scene_20260318_234254/: properties.md
outputs/scene_20260318_234402/: properties.md
outputs/scene_20260318_234434/: properties.md
outputs/scene_20260318_234612/: properties.md
outputs/scene_20260318_234648/: properties.md
outputs/scene_20260318_234708/: properties.md
outputs/scene_20260318_234742/: properties.md
outputs/scene_20260318_234824/: properties.md
outputs/scene_20260318_234841/: properties.md
outputs/scene_20260318_235031/: properties.md
outputs/scene_20260318_235400/: properties.md
outputs/scene_20260318_235402/: properties.md
outputs/scene_20260318_235403/: properties.md
scripts/: setup_dev.sh
src/: camera.py  film.py  generate_scene.py  hit.py  light.py  main.py  main_scene_variations.py  material.py  phong_material.py  point_light.py  random_scene.py  ray.py  scene.py  shape.py  sphere.py
(+50 files in other folders)
